<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FreeNozzle</string>
    <string name="hello_world">Hello world!</string>
    <string name="introduction">Welcome to FreeNozzle, a little tool to help you design or study any rocket nozzle you can imagine.</string>
    <string name="start">To start, choose what you want to do!</string>
    <string name="study_button">Study</string>
    <string name="design_button">Design</string>
    <string name="action_settings">Settings</string>
    <string name="combustion_properties">To start with, set the conditions in the combustion chamber (starting pressure and temperature):</string>
    <string name="pressure_comb">Pressure (bar):</string>
    <string name="temp_comb">Temperature (K):</string>
    <string name="gas_properties">You need to set the gas properties, too. You can choose between its molecular mass or its specific constant. Don\'t forget to enter its adiabatic constant too!</string>
    <string name="gamma_gas">γ</string>
    <string name="comb_end">When everything has been filled, press next!</string>
    <string name="next">NEXT!</string>
    <string name="study_intro">We\'re looking at supersonic nozzles, so there needs to be a throat with M=1. In order to do the remaining calculus you need to enter either the mass flux or the throat\'s diameter, along with the pressure in the exit and in the ambient.</string>
    <string name="study_note">Cases when M=1 is not reached in the nozzle throat will be done in the future, so please enter a value of Pe that is smaller than </string>
    <string name="Pe">Pe (bar):</string>
    <string name="Pa">Pa (bar):</string>
    <string name="F">Resultant thrust (N):</string>
    <string name="Dt">Throat diameter (m):</string>
    <string name="De">Exit diameter (m):</string>
    <string name="m">Mass flux (kg/s):</string>
    <string name="design_intro">In the design problem, you only to specify a force and the exit amb ambient pressure.</string>
    <string name="summerfield_info">Keep in mind that if the ratio Pe/Pa violates any of the Summerfield conditions, like Pe/Pa >= 0.4 or Pe/Pa >= (1.88*Me - 1)^-0.64, the flow inside the nozzle will experiment separation, making any calculus made here invalid.</string>
    <string name="title_activity_first_step">FirstStep</string>
    <string name="title_activity_gas_combustion">Gas Properties</string>
    <string name="title_activity_study">Study</string>
    <string name="title_activity_study_result">Results</string>
    <string name="title_activity_design">Design</string>
    <string name="title_activity_design_result">Results</string>

</resources>
